--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -6,40 +6,18 @@
   right: 0px;
   text-align: center;
   height: 100%;
-  padding: 10px;
-  background-color: #282c34;
+  padding: 4px;
+  background-color: black;
 }
 
-.App-logo {
-  height: 30vmin;
-  pointer-events: none;
+.Header {
+  color: red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Logo {
+  padding-left: 5px;
 }
 
-.App-header {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.K {
+  margin-left: 8px;
 }
