--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,14 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
+
 body {
   width: 300px;
-  height: 260px;
+  height: 400px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  position: relative;
 }
 
 code {
